set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})

target_include_directories(${PROJECT_NAME} PRIVATE
	${LIBCAMERA_INCLUDE_DIRS}
	${OPENCV_INCLUDE_DIRS}
)

target_link_directories(${PROJECT_NAME} PRIVATE
	${LIBCAMERA_LIBRARY_DIRS}
	${OPENCV_LIBRARY_DIRS}
)	

target_link_libraries(${PROJECT_NAME} PRIVATE
	libdart
	${LIBCAMERA_LIBRARIES}
	${OPENCV_LIBRARIES}
)

target_compile_options(${PROJECT_NAME} PRIVATE
    ${LIBCAMERA_CFLAGS_OTHER}
    ${OPENCV_CFLAGS_OTHER}
)
